--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,reqular,500&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="shortcut icon" href="/img/icons/page-logo.webp">
+	<link rel="stylesheet" href="https://test-web22.github.io/growfy/css/style.css">
+	<link rel="shortcut icon" href="https://test-web22.github.io/growfy/img/icons/page-logo.webp">
 	<title>Growfy</title>
 </head>
 
@@ -16,7 +16,7 @@
 		<header class="header">
 			<div class="header__container">
 				<a href="index.html#home" class="header__logo">
-					<img src="/img/logo.svg" alt="logo">
+					<img src="https://test-web22.github.io/growfy/img/logo.svg" alt="logo">
 				</a>
 				<div title="Change themes" class="themes">
 					<button type="button" class="theme__button"></button>
@@ -73,18 +73,18 @@
 					<div class="main__images images-main">
 						<div class="images-main__column">
 							<div class="images-main__item images-main__item--1">
-								<img src="/img/main/01.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/01.jpg" alt="Image">
 							</div>
 							<div class="images-main__item images-main__item--2">
-								<img src="/img/main/02.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/02.jpg" alt="Image">
 							</div>
 						</div>
 						<div class="images-main__column">
 							<div class="images-main__item images-main__item--3">
-								<img src="/img/main/03.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/03.jpg" alt="Image">
 							</div>
 							<div class="images-main__item images-main__item--4">
-								<img src="/img/main/04.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/04.jpg" alt="Image">
 							</div>
 						</div>
 					</div>
@@ -95,19 +95,19 @@
 					<h2 class="clients__title">TRUSTED BY startups and large enterprises</h2>
 					<div class="clients__items">
 						<div class="clients__item">
-							<img src="/img/clients/01.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/clients/01.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="/img/clients/02.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/clients/02.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="/img/clients/03.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyimg/clients/03.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="/img/clients/04.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/clients/04.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="/img/clients/05.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfy/img/clients/05.svg" alt="clients">
 						</div>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 						<div class="services__column">
 							<article class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/01.svg" alt="services">
+									<img src="https://test-web22.github.io/growfy/img/services/01.svg" alt="services">
 								</div>
 								<h4 class="item-services__title">Social Media Marketing</h4>
 								<div class="item-services__text text">
@@ -145,7 +145,7 @@
 							</article>
 							<article class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/02.svg" alt="services">
+									<img src="https://test-web22.github.io/growfy/img/services/02.svg" alt="services">
 								</div>
 								<h4 class="item-services__title">Email Marketing</h4>
 								<div class="item-services__text text">
@@ -157,7 +157,7 @@
 						<div class="services__column">
 							<article class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/03.svg" alt="services">
+									<img src="https://test-web22.github.io/growfy/img/services/03.svg" alt="services">
 								</div>
 								<h4 class="item-services__title">Paid Advertising</h4>
 								<div class="item-services__text text">
@@ -167,7 +167,7 @@
 							</article>
 							<article class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/04.svg" alt="services">
+									<img src="https://test-web22.github.io/growfy/img/services/04.svg" alt="services">
 								</div>
 								<h4 class="item-services__title">SEO Optimization</h4>
 								<div class="item-services__text text">
@@ -183,10 +183,10 @@
 				<div class="why__container">
 					<div class="why__images images-why">
 						<div class="images-why__item images-why__item--1">
-							<img src="/img/why/01.jpg" alt="why">
+							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/why/01.jpg" alt="why">
 						</div>
 						<div class="images-why__item images-why__item--2">
-							<img src="/img/why/02.jpg" alt="why">
+							<img src="https://test-web22.github.io/growfy/img/why/02.jpg" alt="why">
 						</div>
 					</div>
 					<div class="why__content">
@@ -236,7 +236,7 @@
 						</article>
 					</div>
 					<div class="advantages__image">
-						<img src="/img/advatages/01.jpg" alt="advatages">
+						<img src="https://test-web22.github.io/growfy/img/advatages/01.jpg" alt="advatages">
 					</div>
 				</div>
 			</sections>
@@ -264,7 +264,7 @@
 						<article class="testimonials__item item-testimonial">
 							<div class="item-testimonial__user user-testimonial">
 								<div class="user-testimonial__avatar user-testimonial__avatar--1">
-									<img src="/img/testimonials/avatars/01.svg" alt="avatar">
+									<img src="https://test-web22.github.io/growfy/img/testimonials/avatars/01.svg" alt="avatar">
 								</div>
 								<div class="user-testimonial__body">
 									<div class="user-testimonial__title">John Doe</div>
@@ -298,7 +298,7 @@
 						<article class="testimonials__item item-testimonial">
 							<div class="item-testimonial__user user-testimonial">
 								<div class="user-testimonial__avatar user-testimonial__avatar--2">
-									<img src="/img/testimonials/avatars/02.svg" alt="avatar">
+									<img src="https://test-web22.github.io/growfy/img/testimonials/avatars/02.svg" alt="avatar">
 								</div>
 								<div class="user-testimonial__body">
 									<div class="user-testimonial__title">Alice Smith</div>
@@ -332,7 +332,7 @@
 						<article class="testimonials__item item-testimonial">
 							<div class="item-testimonial__user user-testimonial">
 								<div class="user-testimonial__avatar user-testimonial__avatar--3">
-									<img src="/img/testimonials/avatars/03.svg" alt="avatar">
+									<img src="https://test-web22.github.io/growfy/img/testimonials/avatars/03.svg" alt="avatar">
 								</div>
 								<div class="user-testimonial__body">
 									<div class="user-testimonial__title">Sophia Miller</div>
@@ -389,7 +389,7 @@
 					<div class="news__items">
 						<article class="news__item item-news">
 							<div class="item-news__cover item-news__cover--1">
-								<img src="/img/news/01.jpg" alt="news-cover">
+								<img src="https://test-web22.github.io/growfy/img/news/01.jpg" alt="news-cover">
 							</div>
 							<div class="item-news__body">
 								<div class="item-news__data">August 28, 2022</div>
@@ -409,7 +409,7 @@
 						</article>
 						<article class="news__item item-news">
 							<div class="item-news__cover item-news__cover--2">
-								<img src="/img/news/02.jpg" alt="news-cover">
+								<img src="https://test-web22.github.io/growfy/img/news/02.jpg" alt="news-cover">
 							</div>
 							<div class="item-news__body">
 								<div class="item-news__data">
@@ -431,7 +431,7 @@
 						</article>
 						<article class="news__item item-news">
 							<div class="item-news__cover item-news__cover--3">
-								<img src="/img/news/03.jpg" alt="news-cover">
+								<img src="https://test-web22.github.io/growfy/img/news/03.jpg" alt="news-cover">
 							</div>
 							<div class="item-news__body">
 								<div class="item-news__data">
@@ -480,7 +480,7 @@
 				<div class="main-footer__container">
 					<div class="main-footer__column">
 						<div class="main-footer__logo">
-							<img src="/img/logo.svg" alt="logo">
+							<img src="https://test-web22.github.io/growfy/img/logo.svg" alt="logo">
 						</div>
 						<div class="main-footer__text text">
 							<p>
@@ -491,19 +491,19 @@
 						</div>
 						<div class="main-footer__social social">
 							<a href="#" title="LinkedIn" class="social__link">
-								<img src="/img/footer/01.svg" alt="socials-footer">
+								<img src="https://test-web22.github.io/growfy/img/footer/01.svg" alt="socials-footer">
 							</a>
 							<a href="#" title="twitter" class="social__link">
-								<img src="/img/footer/02.svg" alt="socials-footer">
+								<img src="https://test-web22.github.io/growfy/img/footer/02.svg" alt="socials-footer">
 							</a>
 							<a href="#" title="facebook" class="social__link">
-								<img src="/img/footer/03.svg" alt="socials-footer">
+								<img src="https://test-web22.github.io/growfy/img/footer/03.svg" alt="socials-footer">
 							</a>
 							<a href="#" title="YouTube" class="social__link">
-								<img src="/img/footer/04.svg" alt="socials-footer">
+								<img src="https://test-web22.github.io/growfy/img/footer/04.svg" alt="socials-footer">
 							</a>
 							<a href="#" title="Instagram" class="social__link">
-								<img src="/img/footer/05.svg" alt="socials-footer">
+								<img src="https://test-web22.github.io/growfy/img/footer/05.svg" alt="socials-footer">
 							</a>
 						</div>
 					</div>
@@ -580,7 +580,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/script.js"></script>
+	<script src="https://test-web22.github.io/growfy/js/script.js"></script>
 </body>
 
 </html>
