--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
 					<h2 class="clients__title">TRUSTED BY startups and large enterprises</h2>
 					<div class="clients__items">
 						<div class="clients__item">
-							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/clients/01.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfy/img/clients/01.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/clients/02.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfy/img/clients/02.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfyhttps://test-web22.github.io/growfyimg/clients/03.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfy/img/clients/03.svg" alt="clients">
 						</div>
 						<div class="clients__item">
-							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/clients/04.svg" alt="clients">
+							<img src="https://test-web22.github.io/growfy/img/clients/04.svg" alt="clients">
 						</div>
 						<div class="clients__item">
 							<img src="https://test-web22.github.io/growfy/img/clients/05.svg" alt="clients">
