--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<div class="why__container">
 					<div class="why__images images-why">
 						<div class="images-why__item images-why__item--1">
-							<img src="https://test-web22.github.io/growfyhttps://test-web22.github.io/growfy/img/why/01.jpg" alt="why">
+							<img src="https://test-web22.github.io/growfy/img/why/01.jpg" alt="why">
 						</div>
 						<div class="images-why__item images-why__item--2">
 							<img src="https://test-web22.github.io/growfy/img/why/02.jpg" alt="why">
