--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
 					<div class="main__images images-main">
 						<div class="images-main__column">
 							<div class="images-main__item images-main__item--1">
-								<img src="https://test-web22.github.io/growfy/img/main/01.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/01.webp" alt="Image">
 							</div>
 							<div class="images-main__item images-main__item--2">
-								<img src="https://test-web22.github.io/growfy/img/main/02.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/02.webp" alt="Image">
 							</div>
 						</div>
 						<div class="images-main__column">
 							<div class="images-main__item images-main__item--3">
-								<img src="https://test-web22.github.io/growfy/img/main/03.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/03.webp" alt="Image">
 							</div>
 							<div class="images-main__item images-main__item--4">
-								<img src="https://test-web22.github.io/growfy/img/main/04.jpg" alt="Image">
+								<img src="https://test-web22.github.io/growfy/img/main/04.webp" alt="Image">
 							</div>
 						</div>
 					</div>
