changes jpg files to webp

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 				<div class="why__container">
 					<div class="why__images images-why">
 						<div class="images-why__item images-why__item--1">
-							<img src="https://test-web22.github.io/growfy/img/why/01.jpg" alt="why">
+							<img src="https://test-web22.github.io/growfy/img/why/01.webp" alt="why">
 						</div>
 						<div class="images-why__item images-why__item--2">
-							<img src="https://test-web22.github.io/growfy/img/why/02.jpg" alt="why">
+							<img src="https://test-web22.github.io/growfy/img/why/02.webp" alt="why">
 						</div>
 					</div>
 					<div class="why__content">
@@ -389,7 +389,7 @@
 					<div class="news__items">
 						<article class="news__item item-news">
 							<div class="item-news__cover item-news__cover--1">
-								<img src="https://test-web22.github.io/growfy/img/news/01.jpg" alt="news-cover">
+								<img src="https://test-web22.github.io/growfy/img/news/01.webp" alt="news-cover">
 							</div>
 							<div class="item-news__body">
 								<div class="item-news__data">August 28, 2022</div>
@@ -409,7 +409,7 @@
 						</article>
 						<article class="news__item item-news">
 							<div class="item-news__cover item-news__cover--2">
-								<img src="https://test-web22.github.io/growfy/img/news/02.jpg" alt="news-cover">
+								<img src="https://test-web22.github.io/growfy/img/news/02.webp" alt="news-cover">
 							</div>
 							<div class="item-news__body">
 								<div class="item-news__data">
@@ -431,7 +431,7 @@
 						</article>
 						<article class="news__item item-news">
 							<div class="item-news__cover item-news__cover--3">
-								<img src="https://test-web22.github.io/growfy/img/news/03.jpg" alt="news-cover">
+								<img src="https://test-web22.github.io/growfy/img/news/03.webp" alt="news-cover">
 							</div>
 							<div class="item-news__body">
 								<div class="item-news__data">
